--- a/style.css
+++ b/style.css
@@ -60,9 +60,21 @@ h2{
 }
 #quantity{
     border: none;
+    padding:10px 100px;
+    /* color:#fff; */
+    border-bottom: 1px solid rgba(37, 37, 37, 0.63);
+    margin-bottom: 20px;
 }
 input:focus {
     outline:none;
+}
+#donate{
+    text-decoration: none;
+    background-color: orangered;
+    padding:10px 10px;
+    border-radius: 5px;
+    margin-top:10px;
+
 }
 
 
@@ -104,25 +116,58 @@ input:focus {
 
 
 .destibution-box{
-    margin:40px;
+    /* margin:40px; */
 }
 .destribution{
     display: flex;
     width:100%;
-    margin-bottom: 60px;
+    margin: 60px 0px;
 }
 
 .destribuion-img{
     /* height:250px; */
-    width:300px;
-    height:300px;
-    
+    width:100%;
+}
+.half-width{
+    width: 50%;
+    margin:10px 30px;
+}
+
+.destibution-btn{
+    text-decoration: none;
+    color:#000000;
+    background-image: linear-gradient(#ffd78a,#f4762d);
+    padding:8px 12px;
+    border-radius: 8px;
+    box-shadow: 0px 6px 15px rgb(116, 116, 116);
+
 }
 
 
 
+.updates{
+    text-align: center;
+    margin: 80px;
 
+}
 
+.email-box{
+    background-color: #ffe2cf;
+    padding:80px;
+    margin: 5px 20px;
+}
+#email{
+    padding: 10px;
+    border: none;
+}
+#subscriber{
+    text-decoration: none;
+    background-color: #f4762d;
+    padding:7px;
+    margin-left: -5px;
+    border: none;
+    color:#000000;
+}
 
 
 
